[package]
name = "aoc-2023-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
time = "0.3.30"
reqwest = { version = "0.11.22", features = ["blocking"] }
itertools = "0.12.0"
num = "0.4.1"
grid = "0.13.0"
